--- a/main.tex
+++ b/main.tex
@@ -9,103 +9,116 @@
 	
 	\begin{center} \large \textbf{PREFACE}\normalsize\end{center}
 	
-	This version of Matthew is translated from King James Version by Fluxus Cantonia Art Collective. It serves two purposes:
+	This excerpt of Matthew is translated from King James Version by Fluxus Cantonia Art Collective. It serves two purposes:
 	\begin{enumerate}
 		\item as a demonstration of 
-		the newest Cantonese romanization; and:
+		the newest Cantonese romanization from Fluxus Cantonia; and:
 		\item as the beginning of a translation attempt of the Bible to modern Cantonese.
 	\end{enumerate}
 	
-	The transliteration of certain names (of people and places) are slightly different from common ``Chinese'' transliteration, since Cantonese Bible being in Cantonese should not subject itself to the restriction of Mandarin phonology as previous attempts tend to do.
+	The transliteration of certain names (of people and places) are slightly different from common ``Chinese'' transliteration, since Cantonese Bible being in Cantonese should not subject itself to the restriction of Mandarin phonology as previous attempts tend to do, e.g. the name ``Jacob'' in its original form starts with a ``y'' sound; thus in this version it is translated as ``Y\v{a}a-gok'' instead of the more common ``Ng\v{a}a-gok''.
 	
 	The translator hereby declare all content of this document to be in public domain; that is, the translator denounce any associating copyright, and anyone can freely use, copy and redistribute this document or the content of this document without any requirements.
 	
 	\begin{flushright}
-		\textit{2023.5.23}
+		\textit{2024.5.23}
 	\end{flushright}
 	
-	\vskip 36pt
-	\begin{center} \large \textbf{MẢA-TAAI FÛK-YÂM} \normalsize \end{center}
-\begin{scripture}
-	\ch{1}\noindent
-	\vs{1}\underline{Aa-baak-lâa-häam} ge hãu-dõi, dãai-wãi ge zí-syûn Yë-sôu Gêi-dûk ge gâa póu yü hãa.
+	\begin{center} \large \textbf{ON THE ROMANIZATION USED} \normalsize \end{center}
+	The following is a quick summary of the difference between Jyutping and the romanization used in this text. Note that this section assumes the reader is familiar with Jyutping.
 	
-	\vs{2}\underline{Aa-baak-lâa-häam} sâang \underline{Yỉ-saat}, \underline{Yỉ-saat} sâang \underline{Yảa-gok}; \underline{Yảa-gok} sâang zó \underline{Yäu-dãai} tüng kẻoi ge hîng dãi; \vs{3}\underline{Yäu-dãai} tüng \underline{Tâa-mảa} sâang zó \underline{Faat-lẽi-sî} tüng \underline{Saat-lâa}; \underline{Faat-lẽi-sî} sâang \underline{Yî-sî-lëon}; \underline{Yî-sî-lëon} sâang \underline{Aa-läm};
-	\vs{4}\underline{Aa-läm} sâang \underline{Aa-mải-näa-daap}; \underline{Aa-mải-näa-daap} sâang \underline{Näa-sẽon}; \underline{Näa-sẽon} sâang \underline{Saat-yỉ-mün};
-	\vs{5}\underline{Saat-yỉ-mün} tüng \underline{Lâa-hãp} sâang zó \underline{Bô-zî}, \underline{Bô-zî} tüng \underline{Lõu-dâk} sâang \underline{Ô-bui-dâk}; \underline{Ô-bui-dâk} sâang \underline{Yë-sî};
-	\vs{6}\underline{Yë-sî} sâang zó \underline{Dãai-wãi} wöng, yï \underline{Dãai-wãi} tüng yün bún yîng gôi hãi \underline{Wû-lẻi-aa-sî} ge lỏu pö sâang zó \underline{Só-lö-mün};
-	
-	\vs{7}\underline{Só-lö-mün} sâang \underline{Lö-bô-am}; \underline{Lö-bô-am} sâang \underline{Aa-béi-aa}, \underline{Aa-béi-aa} sâang \underline{Aa-sâa};
-	\vs{8}\underline{Aa-sâa} sâang \underline{Yoek-sâa-faat}; \underline{Yoek-sâa-faat} sâang \underline{Yoek-läm}; \underline{Yoek-läm} sâang \underline{Ô-zî-aa-sî};
-	\vs{9}\underline{Ô-zî-aa-sî} sâang \underline{Yoek-täam}; \underline{Yoek-täam} sâang \underline{Aa-hâa-zî}; \underline{Aa-hâa-zî} sâang \underline{Yî-zî-këi-aa-sî};
-	\vs{10}\underline{Yî-zî-këi-aa-sî} sâang \underline{Mảa-näa-sî}; \underline{Mảa-näa-sî} sâang \underline{Aa-mün}; \underline{Aa-mün} sâang \underline{Yoek-sî-aa-sî};
-	\vs{11}\underline{Yoek-sî-aa-sî} hái bei yän daai dou \underline{Bâa-béi-lëon} gó zãn sâang zó \underline{Yë-ô-nëi-aa-sî} tüng kẻoi ge hîng dãi.
-	
-	\vs{12}Cîn dou \underline{Bâa-béi-lëon} zî hãu, \underline{Yë-ô-nëi-aa-sî} sâang \underline{Saat-lâa-tit-yỉ}; \underline{Saat-lâa-tit-yỉ} sâang \underline{Zo-lö-bâa-bui-yỉ};
-	\vs{13}\underline{Zo-lö-bâa-bui-yỉ} sâang \underline{Aa-béi-wû-dâk}; \underline{Aa-béi-wû-dâk} sâang \underline{Yî-lẻi-aa-gîm}; \underline{Yî-lẻi-aa-gîm} sâang \underline{Aa-zo-yỉ}
-	\vs{14}\underline{Aa-zo-yỉ} sâang \underline{Sâa-dõk}; \underline{Sâa-dõk} sâang \underline{Aa-hêi-mỏu}; \underline{Aa-hêi-mỏu} sâang \underline{Yỉ-lẽot};
-	\vs{15}\underline{Yỉ-lẽot} sâang \underline{Yî-lẻi-aa-sâa}; \underline{Yî-lẻi-aa-sâa} sâang \underline{Mảa-daan}; \underline{Mảa-daan} sâang \underline{Yảa-gok};
-	\vs{16}\underline{Yảa-gok} sâang \underline{Mảa-lẽi-aa} ge lỏu gûng \underline{Yoek-sât}; bẽi cîng wäi Gêi-dûk ge Yë-sôu zîk hãi \underline{Mảa-lẽi-aa} sâang ge.
-	
-	\vs{17}Yü sõeng só sẽot, cüng \underline{Aa-baak-lâa-häam} dou \underline{Dãai-wãi} gwo zó sãp-sei dõi, cüng \underline{Dãai-wãi} heoi dou gwo \underline{Bâa-béi-lëon} ge sï hãu gwo zó sãp-sei dõi, cüng dou zó \underline{Bâa-béi-lëon} heoi dou Yë-sôu cêot sai yãu gwo zó sãp-sei dõi .
-	
-	\vs{18}Yë-sôu Gêi-dûk cêot sai hãi gám ge yât wüi sĩ: kẻoi aa-mâa \underline{Mảa-lẽi-aa} dông sï yỉ gîng héoi zó bei \underline{Yoek-sât}, dãan hãi hái kẻoi zũng mẽi gwo mün ge sï hãu, kẻoi zãu yân sing lëng yï dãai zó tỏu.
-	\vs{19}Kẻoi lỏu gûng \underline{Yoek-sât} zok wäi yât go yĩ yän m' yũn yi dông gâai sâu-yũk kẻoi , yû-sĩ zãu nám jũ sî dái hãa yâu zó kẻoi.
-	\vs{20}Dãan hãi hái kẻoi nám gán nî-dî sĩ ge sï hãu, \name{sõeng dai} ge sí-zé hái kẻoi ge mũng yãp bîn cêot yĩn, tüng kẻoi góng: \underline{Dãai-wãi} ge hãu dõi \underline{Yoek-sât}, m' hóu gêng céoi \underline{Mảa-lẽi-aa} gwo mün; kẻoi tỏu yãp bîn gó go hái sing lëng ge zái.
-	\vs{21}Kẻoi wũi sâang yât go näam zái; nẻi yiu tüng go zái héi mëng giu Yë-sôu; kẻoi wũi cüng kẻoi ge yän män ge zẽoi-ok zî zûng jôeng kẻoi dẽi gáai gau cêot läi.
-	\vs{22}Nî-dî sĩ hãi wãi zó yiu sïng chün \name{jú} tûng gwo sîn-zî ge háu góng ge syũt wãa:
-	\vs{23}Yảu go chủ nẻoi wũi wäai yãn; kẻoi wũi sâang yât go näam zái, yï kẻoi-dẽi wũi giu kẻoi go mëng \underline{Yỉ-mảa-nõi-lẽi} (zîk hãi "\name{sõeng dai} tüng ngỏ dẽi tüng zõi" ge yi sî).
-	\vs{24}\underline{Yoek-sât} séng zó zî hãu, zãu on ziu \name{sõeng dai} ge sí-zé ge fân-fũ céoi zó kẻoi lỏu pö gwo mün,
-	\vs{25}dãan hãi mỏu tüng kẻoi tüng föng; zĩk dou hãu mẻi kẻoi sâang zó kẻoi ge jóeng-zí zî hãu, tüng kẻoi céoi mëng giu Yë-sôu .
-	
-	
-	
-	\ch{2}\noindent
-	\vs{1}Yë-sôu hái \underline{Hêi-lẽot} zõu gán gwok-wöng ge sï-hãu hái
-	\underline{Yäu-dãai} zî dẽi \underline{Bât-lẽi-häam} cêot sai; yảu géi go bok-sĩ
-	cüng dûng-mĩn läi dou \underline{Yë-lõu-saat-läm} \vs{2}mãn wãa, gó-go cêot sai yiu läi zõu \underline{Yäu-taai yän} ge wöng ge
-	gó-wãi hái bîn nê? Ngỏ dẽi hái dûng-mĩn ge sï-hãu tái dou
-	kẻoi go lâp sêng, só yỉ dãk dâng gwo läi baai kẻoi. \vs{3}\underline{Hêi-lẽot} wöng têng dou \added{nî-dî sĩ} zî-hãu go sâm zãu hóu
-  m' ôn lõk; sïng-go \underline{Yë-lõu-saat-läm} sëng ge baak-sing dôu tüng
-  kẻoi yât yõeng. \vs{4}Kẻoi zĩu cäi saai chün-bõu ge zai-sî-jóeng tüng mäai
-  män-gâan ge gaau-faat jûn-gâa, mãn kẻoi dẽi Gêi-dûk gau gíng
-  hái bîn-bĩn cêot sai. \vs{5}Kẻoi-dẽi tüng kẻoi wãa hái \underline{Yäu-dãai} ge \underline{Bât-lẽi-häam}, yân wäi yảu sîn-zî gám sé wãa:
-  
-  \vs{6}\begin{poetry}
-  	\underline{Bât-lẽi-häam} aa, nẻi hái \underline{Yäu-dãai} zî dẽi lẻoi-bĩn,
-	  Nẻi hái \underline{Yäu-dãai} zî dẽi lẻoi-bĩn bing m' hãi zeoi m' gán yiu	gó go;
-  
-  Yân wãi yảu yât go túng zĩ zé wũi cüng nẻi gó dõu cêot läi,
-  Kẻoi wũi túng zĩ ngỏ \underline{Yỉ-sîk-lĩ} ge zí män.
-\end{poetry}
-  
-  \vs{7}Zî hãu \underline{Hêi-lẽot} sî dái hãa giu zó bâan bok-sĩ läi，chöeng-sai mãn kẻoi dẽi gó lâp sêng hãi hái mê sï hãu cêot yĩn ge, \vs{8}yïn zî hãu kẻoi zãu paai kẻoi-dẽi heoi \underline{Bât lẽi häam} dõu, wãa, nẻi dẽi zí-sai dî heoi wán gó-go sai lõu zái, wán dou zî hãu tüng ngỏ góng, gám ngỏ sîn hóu dôu gwo heoi baai kẻoi.  
-  \vs{9}Kẻoi-dẽi têng yün gwok-wöng ge wãa zãu cêot-faat la; nî-go sï-hãu, kẻoi-dẽi hái dûng mĩn ge sï-hãu gin dou ge gó lâp sêng häang hái kẻoi-dẽi cïn bĩn, yât zĩk häang dou sai lõu zái gó bîn sîn tïng hái zîng sỏeng fông.
-  \vs{10}Kẻoi-dẽi gin dou lâp sêng, sâm lẻoi dãk bĩt gôu-hing.
-  \vs{11}Yïn zî hãu kẻoi-dẽi yãp dou gâan fóng gin dou go sai lõu zái tüng kẻoi aa-mâa \underline{Mảa-lẽi-aa}, yû sĩ zãu fũk dâi baai kẻoi; kẻoi dẽi dáa hôi kẻoi-dẽi daai läi ge bóu-sôeng, cïng sõeng wöng-gâm, yủ-hôeng tüng mũt-yõek zok wäi lải-mãt.
-  	\vs{12}Hãu-löi yân wãi \name{Sõeng-dai} hái kẻoi-dẽi ge mũng lẻoi-bĩn gíng-gou kẻoi-dẽi m' hóu zoi fâan fâan \underline{Hêi-lẽot} gó dõu, só yỉ kẻoi-dẽi fâan kẻoi dẽi zĩ géi dẽi täu ge sï hãu häang zó lĩng ngõi yât tïu lõu.
-  	
-  	\vs{13}Kẻoi-dẽi záu zó zî hãu, \name{jú} ge sí-zé hái \underline{Yoek-sât} ge mũng yãp bîn cêot yĩn; tüng kẻoi wãa, héi sân lâa! Läa läa läm daai mäai go sai lõu tüng kẻoi aa-mâa heoi ôi-kãp, hái gó bîn jũ ju dáng ngỏ zoi tûng zî nẻi; \underline{Hêi-lẽot} yiu wán go sai lõu zái cêot läi saat la.
-  	\vs{14}Yû-sĩ kẻoi síng zó zî hãu zãu tüng go sai lõu tüng kẻoi aa-mâa heoi zó Ôi-kãp,
-  	\vs{15}hái gó bîn jũ dou \underline{Hêi-lẽot} séi zó wäi zí. Nî-dî sĩ hãi wäi zó yiu sïng chün \name{jú} tûng gwo sîn-zî góng ge wãa: Ngỏ wũi cüng Ôi-kãp giu Ngỏ ge zái cêot läi.
-  	\vs{16}\underline{Hêi-lẽot} faat yĩn zĩ géi bei gó bâan bok-sĩ wán zó bãn zî hãu zãu faat saai lãan zâa, paai yän heoi \underline{Bât-lẽi-häam} tüng zâu bîn ge dẽi-kêoi, on ziu kẻoi cüng bok-sĩ têng fâan läi ge sï gâan jôeng lỏeng seoi yỉ hãa ge sai lõu chün-bõu saat saai; 
-  	\vs{17}gám yõeng zãu sïng chün zó sîn-zî \underline{Yë-lẽi-mải} góng ge syũt-wãa:
-  	\vs{18}\begin{poetry}
-  		Cüng \underline{Lâa-mảa} sïng chün löi yât báa sêng,
-  		Bêi tung, câu yâp, tüng ôi dõu;
-  		
-  		\underline{Lâa-hit} wãi kẻoi ge zái-nẻoi yï hûk;
-  		Möu yän hó yỉ ôn wai dou kẻoi, yân wäi kẻoi ge zái-nẻoi chün-bõu dou m' hái dõu la.
-  	\end{poetry}
-  	
-  	\vs{19}\underline{Hêi-lẽot} séi zó zî hãu, \name{sõeng-dai} ge sí-zé hái \underline{Yoek-sât} ge mũng yãp bîn cêot yĩn; 
-  	\vs{20}tüng kẻoi wãa, héi sân lâa! Daai mäai go sai lõu tüng kẻoi aa-mâa fâan \underline{Yỉ-sîk-lĩt} lâa, yiu saat nẻi go zái ge yän yỉ gîng séi zó la.
-  	\vs{21}Yû-sĩ kẻoi zãu héi sân daai go sai lõu tüng kẻoi aa-mâa fâan zó \underline{Yỉ-sîk-lĩt};
-  	\vs{22}dãan hãi kẻoi têng dou \underline{Aa-hêi-läu-sî} gai sïng zó kẻoi lỏu dãu \underline{Hêi-lẽot} go wãi zõu zó \underline{Yäu-dãai} zî dẽi ge gwok wöng ge sï hãu, hôi cí gok dâk gêng yï m' gám fâan heoi; yï-cé \name{sõeng-dai} hái kẻoi ge mũng yãp bîn dôu gíng gou gwo kẻoi, yû-sĩ kẻoi zãu jun sân heoi zó \underline{Gâa-lẽi-lẽi};
-  	\vs{23}Kẻoi hái yât go giu \underline{Näa-saat-lãak} ge sïng dõu jũ dâi; gám yõeng zãu sïng chün zó sîn-zî góng ge ``Kẻoi wũi bei yän cîng wäi hãi \underline{Näa-saat-lãak} yän'' nî gĩn sĩ.
-  	
-  	
-  	
+	\begin{itemize}
+		\item ``eo'' and ``oe'' are now ``ø'' and ``œ''.
+		\item All ``j''s are now ``y''s.
+		\item ``Yu'' before ``z'' ``c'' and ``j'' are written as ``u''; and also, ``z'' and ``c'' before ``yu'' are written as ``j'' and ``ch'' (e.g. it's ``jun'' but not ``zyun'', ``chun'' but not ``cyun'', ``yut'' but not ``jyut'' or ``yyut'').
+		\item ``Zoe'' and ``coe'' are now ``joe'' and ``choe' (which are in turn ``jœ'' and ``chœ'').
+		\item Tones are now diacritics instead of numbers, so it's \Large sî  sí si sï sǐ sĩ \normalsize instead of \Large si1 si2 si3 si4 si5 si6 \normalsize.
+	\end{itemize}
 
-\end{scripture}
+	
+	
+	\vskip 36pt
+	\begin{center} \large \textbf{M\v{A}A-TAAI FÛK-YÂM} \normalsize \end{center}
+	\begin{scripture}
+		\ch{1}\noindent
+		\vs{1}\underline{Aa-baak-lâa-häam} ge hãu-dõi, dãai-wãi ge zí-syûn Yë-sôu Gêi-dûk ge gâa póu yü hãa.
+		
+		\vs{2}\underline{Aa-baak-lâa-häam} sâang \underline{Y\v{i}-saat}, \underline{Y\v{i}-saat} sâang \underline{Y\v{a}a-gok}; \underline{Y\v{a}a-gok} sâang zó \underline{Yäu-dãai} tüng k\v{ø}i ge hîng dãi; \vs{3}\underline{Yäu-dãai} tüng \underline{Tâa-m\v{a}a} sâang zó \underline{Faat-lẽi-sî} tüng \underline{Saat-lâa}; \underline{Faat-lẽi-sî} sâang \underline{Yî-sî-lø̈n}; \underline{Yî-sî-lø̈n} sâang \underline{Aa-läm};
+		\vs{4}\underline{Aa-läm} sâang \underline{Aa-m\v{a}i-näa-daap}; \underline{Aa-m\v{a}i-näa-daap} sâang \underline{Näa-sø̃n}; \underline{Näa-sø̃n} sâang \underline{Saat-y\v{i}-mün};
+		\vs{5}\underline{Saat-y\v{i}-mün} tüng \underline{Lâa-hãp} sâang zó \underline{Bô-zî}, \underline{Bô-zî} tüng \underline{Lõu-dâk} sâang \underline{Ô-bui-dâk}; \underline{Ô-bui-dâk} sâang \underline{Yë-sî};
+		\vs{6}\underline{Yë-sî} sâang zó \underline{Dãai-wãi} wöng, yï \underline{Dãai-wãi} tüng yün bún yîng gôi hãi \underline{Wû-l\v{e}i-aa-sî} ge l\v{o}u pö sâang zó \underline{Só-lö-mün};
+		
+		\vs{7}\underline{Só-lö-mün} sâang \underline{Lö-bô-am}; \underline{Lö-bô-am} sâang \underline{Aa-béi-aa}, \underline{Aa-béi-aa} sâang \underline{Aa-sâa};
+		\vs{8}\underline{Aa-sâa} sâang \underline{Yœk-sâa-faat}; \underline{Yœk-sâa-faat} sâang \underline{Yœk-läm}; \underline{Yœk-läm} sâang \underline{Ô-zî-aa-sî};
+		\vs{9}\underline{Ô-zî-aa-sî} sâang \underline{Yœk-täam}; \underline{Yœk-täam} sâang \underline{Aa-hâa-zî}; \underline{Aa-hâa-zî} sâang \underline{Yî-zî-këi-aa-sî};
+		\vs{10}\underline{Yî-zî-këi-aa-sî} sâang \underline{M\v{a}a-näa-sî}; \underline{M\v{a}a-näa-sî} sâang \underline{Aa-mün}; \underline{Aa-mün} sâang \underline{Yœk-sî-aa-sî};
+		\vs{11}\underline{Yœk-sî-aa-sî} hái bei yän daai dou \underline{Bâa-béi-lø̈n} gó zãn sâang zó \underline{Yë-ô-nëi-aa-sî} tüng k\v{\o{}}i ge hîng dãi.
+		
+		\vs{12}Cîn dou \underline{Bâa-béi-lø̈n} zî hãu, \underline{Yë-ô-nëi-aa-sî} sâang \underline{Saat-lâa-tit-y\v{i}}; \underline{Saat-lâa-tit-y\v{i}} sâang \underline{Zo-lö-bâa-bui-y\v{i}};
+		\vs{13}\underline{Zo-lö-bâa-bui-y\v{i}} sâang \underline{Aa-béi-wû-dâk}; \underline{Aa-béi-wû-dâk} sâang \underline{Yî-l\v{e}i-aa-gîm}; \underline{Yî-l\v{e}i-aa-gîm} sâang \underline{Aa-zo-y\v{i}}
+		\vs{14}\underline{Aa-zo-y\v{i}} sâang \underline{Sâa-dõk}; \underline{Sâa-dõk} sâang \underline{Aa-hêi-m\v{o}u}; \underline{Aa-hêi-m\v{o}u} sâang \underline{Y\v{i}-l\~{\o{}}t};
+		\vs{15}\underline{Y\v{i}-l\~{\o{}}t} sâang \underline{Yî-l\v{e}i-aa-sâa}; \underline{Yî-l\v{e}i-aa-sâa} sâang \underline{M\v{a}a-daan}; \underline{M\v{a}a-daan} sâang \underline{Y\v{a}a-gok};
+		\vs{16}\underline{Y\v{a}a-gok} sâang \underline{M\v{a}a-lẽi-aa} ge l\v{o}u gûng \underline{Yœk-sât}; bẽi cîng wäi Gêi-dûk ge Yë-sôu zîk hãi \underline{M\v{a}a-lẽi-aa} sâang ge.
+		
+		\vs{17}Yü s\~{œ}ng só sø̃t, cüng \underline{Aa-baak-lâa-häam} dou \underline{Dãai-wãi} gwo zó sãp-sei dõi, cüng \underline{Dãai-wãi} høi dou gwo \underline{Bâa-béi-lø̈n} ge sï hãu gwo zó sãp-sei dõi, cüng dou zó \underline{Bâa-béi-lø̈n} høi dou Yë-sôu cø̂t sai yãu gwo zó sãp-sei dõi .
+		
+		\vs{18}Yë-sôu Gêi-dûk cø̂t sai hãi gám ge yât wüi sĩ: k\v{ø}i aa-mâa \underline{M\v{a}a-lẽi-aa} dông sï y\v{i} gîng hǿi zó bei \underline{Yœk-sât}, dãan hãi hái kø̌i zũng mẽi gwo mün ge sï hãu, zãu yân sing lëng yï dãai zó t\v{o}u.
+		\vs{19}kø̌i l\v{o}u gûng \underline{Yœk-sât} zok wäi yât go yĩ yän m̈ yũn yĩ dông gâai sâu-yũk kø̌i , yû-sĩ zãu nám jũ sî dái hãa yâu zó kø̌i.
+		\vs{20}Dãan hãi hái kø̌i nám gán nî-dî sĩ ge sï hãu, \name{s\~{œ}ng-dai} ge sí-zé hái kø̌i ge mũng yãp bîn cø̂t yĩn, tüng kø̌i góng: \underline{Dãai-wãi} ge hãu dõi \underline{Yœk-sât}, m̈ hóu gêng cǿi \underline{M\v{a}a-lẽi-aa} gwo mün; kø̌i t\v{o}u yãp bîn gó go hái sing lëng ge zái.
+		\vs{21}kø̌i wũi sâang yât go näam zái; n\v{e}i yiu tüng go zái héi mëng giu Yë-sôu; kø̌i wũi cüng kø̌i ge yän män ge zø̃i-ok zî zûng jœ̂ng kø̌i dẽi gáai gau cø̂t läi.
+		\vs{22}Nî-dî sĩ hãi wãi zó yiu sïng chün \name{jú} tûng gwo sîn-zî ge háu góng ge syũt wãa:
+		\vs{23}Y\v{a}u go chủ nø̉i wũi wäai yãn; kø̌i wũi sâang yât go näam zái, yï kø̌i-dẽi wũi giu kø̌i go mëng \underline{Y\v{i}-m\v{a}a-nõi-lẽi} (zîk hãi "\name{sœ̂ng dai} tüng ng\v{o} dẽi tüng zõi" ge yi sî).
+		\vs{24}\underline{Yœk-sât} séng zó zî hãu, zãu on ziu \name{s\~{œ}ng dai} ge sí-zé ge fân-fũ cǿi zó kø̌i l\v{o}u pö gwo mün,
+		\vs{25}dãan hãi m\v{o}u tüng kø̌i tüng föng; zĩk dou hãu m\v{e}i kø̌i sâang zó kø̌i ge jœ́ng-zí zî hãu, tüng kø̌i cǿi mëng giu Yë-sôu .
+		
+		
+		
+		\ch{2}\noindent
+		\vs{1}Yë-sôu hái \underline{Hêi-l\~{\o{}}t} zõu gán gwok-wöng ge sï-hãu hái
+		\underline{Yäu-dãai} zî dẽi \underline{Bât-lẽi-häam} c\^{\o{}}t sai; y\v{a}u géi go bok-sĩ
+		cüng dûng-mĩn läi dou \underline{Yë-lõu-saat-läm} \vs{2}mãn wãa, gó-go c\^{\o{}}t sai yiu läi zõu \underline{Yäu-taai yän} ge wöng ge
+		gó-wãi hái bîn nê? Ng\v{o} dẽi hái dûng-mĩn ge sï-hãu tái dou
+		k\v{\o{}}i go lâp sêng, só y\v{i} dãk dâng gwo läi baai k\v{\o{}}i. \vs{3}\underline{Hêi-l\~{\o{}}t} wöng têng dou \added{nî-dî sĩ} zî-hãu go sâm zãu hóu
+		\"{m} ôn lõk; sïng-go \underline{Yë-lõu-saat-läm} sëng ge baak-sing dôu tüng
+		k\v{o}i yât y\~{œ}ng. \vs{4}K\v{\o{}}i zĩu cäi saai chün-bõu ge zai-sî-jóeng tüng mäai
+		män-gâan ge gaau-faat jûn-gâa, mãn k\v{\o{}}i dẽi Gêi-dûk gau gíng
+		hái bîn-bĩn c\^{\o{}}t sai. \vs{5}K\v{\o{}}i-dẽi tüng k\v{\o{}}i wãa hái \underline{Yäu-dãai} ge \underline{Bât-lẽi-häam}, yân wäi y\v{a}u sîn-zî gám sé wãa:
+		
+		\vs{6}\begin{poetry}
+			\underline{Bât-lẽi-häam} aa, n\v{e}i hái \underline{Yäu-dãai} zî dẽi l\v{\o{}}i-bĩn,
+			N\v{e}i hái \underline{Yäu-dãai} zî dẽi l\v{\o{}}i-bĩn bing \"{m} hãi z\o{}i \"{m} gán yiu	gó go;
+			
+			Yân wãi y\v{a}u yât go túng zĩ zé wũi cüng n\v{e}i gó dõu c\^{\o{}}t läi,
+			K\v{\o{}}i wũi túng zĩ ng\v{o} \underline{Y\v{i}-sîk-lĩ} ge zí män.
+		\end{poetry}
+		
+		\vs{7}Zî hãu \underline{Hêi-l\~{\o{}}t} sî dái hãa giu zó bâan bok-sĩ läi，chöeng-sai mãn k\v{\o{}}i dẽi gó lâp sêng hãi hái mê sï hãu c\^{\o{}}t yĩn ge, \vs{8}yïn zî hãu k\v{\o{}}i zãu paai k\v{\o{}}i-dẽi h\o{}i \underline{Bât lẽi häam} dõu, wãa, n\v{e}i dẽi zí-sai dî h\o{}i wán gó-go sai lõu zái, wán dou zî hãu tüng ng\v{o} góng, gám ng\v{o} sîn hóu dôu gwo h\o{}i baai k\v{\o{}}i.  
+		\vs{9}K\v{\o{}}i-dẽi têng yün gwok-wöng ge wãa zãu c\^{\o{}}t-faat la; nî-go sï-hãu, k\v{\o{}}i-dẽi hái dûng mĩn ge sï-hãu gin dou ge gó lâp sêng häang hái k\v{\o{}}i-dẽi cïn bĩn, yât zĩk häang dou sai lõu zái gó bîn sîn tïng hái zîng s\v{o}eng fông.
+		\vs{10}K\v{\o{}}i-dẽi gin dou lâp sêng, sâm l\v{\o{}}i dãk bĩt gôu-hing.
+		\vs{11}Yïn zî hãu k\v{\o{}}i-dẽi yãp dou gâan fóng gin dou go sai lõu zái tüng k\v{\o{}}i aa-mâa \underline{M\v{a}a-lẽi-aa}, yû sĩ zãu fũk dâi baai k\v{\o{}}i; k\v{\o{}}i dẽi dáa hôi k\v{\o{}}i-dẽi daai läi ge bóu-s\^{œ}ng, cïng s\~{œ}ng wöng-gâm, yủ-h\^{œ}ng tüng mũt-y\~{œ}k zok wäi l\v{a}i-mãt.
+		\vs{12}Hãu-löi yân wãi \name{S\~{œ}ng-dai} hái k\v{\o{}}i-dẽi ge mũng l\v{\o{}}i-bĩn gíng-gou k\v{\o{}}i-dẽi \"{m} hóu zoi fâan fâan \underline{Hêi-l\~{\o{}}t} gó dõu, só y\v{i} k\v{\o{}}i-dẽi fâan k\v{\o{}}i dẽi zĩ géi dẽi täu ge sï hãu häang zó lĩng ngõi yât tïu lõu.
+		
+		\vs{13}K\v{\o{}}i-dẽi záu zó zî hãu, \name{jú} ge sí-zé hái \underline{Y\oe{}k-sât} ge mũng yãp bîn c\^{\o{}}t yĩn; tüng k\v{\o{}}i wãa, héi sân lâa! Läa läa läm daai mäai go sai lõu tüng k\v{\o{}}i aa-mâa h\o{}i ôi-kãp, hái gó bîn jũ ju dáng ng\v{o} zoi tûng zî n\v{e}i; \underline{Hêi-l\~{\o{}}t} yiu wán go sai lõu zái c\^{\o{}}t läi saat la.
+		\vs{14}Yû-sĩ k\v{\o{}}i síng zó zî hãu zãu tüng go sai lõu tüng k\v{\o{}}i aa-mâa h\o{}i zó Ôi-kãp,
+		\vs{15}hái gó bîn jũ dou \underline{Hêi-l\~{\o{}}t} séi zó wäi zí. Nî-dî sĩ hãi wäi zó yiu sïng chün \name{jú} tûng gwo sîn-zî góng ge wãa: Ng\v{o} wũi cüng Ôi-kãp giu Ng\v{o} ge zái c\^{\o{}}t läi.
+		\vs{16}\underline{Hêi-l\~{\o{}}t} faat yĩn zĩ géi bei gó bâan bok-sĩ wán zó bãn zî hãu zãu faat saai lãan zâa, paai yän h\o{}i \underline{Bât-lẽi-häam} tüng zâu bîn ge dẽi-k\^{\o{}}i, on ziu k\v{\o{}}i cüng bok-sĩ têng fâan läi ge sï gâan j\^{œ}ng l\v{o}eng s\o{}i y\v{i} hãa ge sai lõu chün-bõu saat saai; 
+		\vs{17}gám y\~{œ}ng zãu sïng chün zó sîn-zî \underline{Yë-lẽi-m\v{a}i} góng ge syũt-wãa:
+		\vs{18}\begin{poetry}
+			Cüng \underline{Lâa-m\v{a}a} sïng chün löi yât báa sêng,
+			Bêi tung, câu yâp, tüng ôi dõu;
+			
+			\underline{Lâa-hit} wãi k\v{\o{}}i ge zái-n\v{\o{}}i yï hûk;
+			Möu yän hó y\v{i} ôn wai dou k\v{\o{}}i, yân wäi k\v{\o{}}i ge zái-n\v{\o{}}i chün-bõu dou \"{m} hái dõu la.
+		\end{poetry}
+		
+		\vs{19}\underline{Hêi-l\~{\o{}}t} séi zó zî hãu, \name{s\~{œ}ng-dai} ge sí-zé hái \underline{Yoek-sât} ge mũng yãp bîn c\^{\o{}}t yĩn; 
+		\vs{20}tüng k\v{\o{}}i wãa, héi sân lâa! Daai mäai go sai lõu tüng k\v{\o{}}i aa-mâa fâan \underline{Y\v{i}-sîk-lĩt} lâa, yiu saat n\v{e}i go zái ge yän y\v{i} gîng séi zó la.
+		\vs{21}Yû-sĩ k\v{\o{}}i zãu héi sân daai go sai lõu tüng k\v{\o{}}i aa-mâa fâan zó \underline{Y\v{i}-sîk-lĩt};
+		\vs{22}dãan hãi k\v{\o{}}i têng dou \underline{Aa-hêi-läu-sî} gai sïng zó k\v{\o{}}i l\v{o}u dãu \underline{Hêi-l\~{\o{}}t} go wãi zõu zó \underline{Yäu-dãai} zî dẽi ge gwok wöng ge sï hãu, hôi cí gok dâk gêng yï \"{m} gám fâan h\o{}i; yï-cé \name{s\~{œ}ng-dai} hái k\v{\o{}}i ge mũng yãp bîn dôu gíng gou gwo k\v{\o{}}i, yû-sĩ k\v{\o{}}i zãu jun sân h\o{}i zó \underline{Gâa-lẽi-lẽi};
+		\vs{23}K\v{\o{}}i hái yât go giu \underline{Näa-saat-lãak} ge sïng dõu jũ dâi; gám y\~{œ}ng zãu sïng chün zó sîn-zî góng ge <<K\v{\o{}}i wũi bei yän cîng wäi hãi \underline{Näa-saat-lãak} yän>> nî gĩn sĩ.
+		
+		
+		
+		
+	\end{scripture}
 \end{document}
